# qml

./: .gitignore  Actions.qml  CMakeLists.txt  DataBus.qml  LICENSE  README.md  Store.qml  Subscribe.qml  Triangles.cpp  Triangles.h  View.qml  main.cpp  main.qml  renderwindow.cpp  renderwindow.h  vcpkg.json
